# inter-bit

dex-blockchain-expert/: .gitignore  API.md  CAPABILITY_SHOWCASE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  PROGRESS.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  README.md  SECURITY.md  TECHNICAL_DESIGN.md  TODO.md  test_compile.rs
dex-blockchain-expert/benches/: consensus_bench.rs  performance_bench.rs  state_machine_bench.rs
dex-blockchain-expert/src/: lib.rs  main.rs
dex-blockchain-expert/src/ai_trading/: mod.rs  optimizer.rs  predictor.rs  risk_manager.rs  strategy.rs
dex-blockchain-expert/src/consensus/: hotstuff.rs  mod.rs  optimistic_bft.rs  tendermint.rs  types.rs  validator.rs
dex-blockchain-expert/src/cross_chain/: bridge.rs  ibc.rs  light_client.rs  mod.rs  relayer.rs
dex-blockchain-expert/src/defi/: flash_loan.rs  lending.rs  mod.rs  options.rs  perpetual.rs  yield_farming.rs
dex-blockchain-expert/src/dex/: amm.rs  liquidity.rs  matching_engine.rs  mod.rs  orderbook.rs  router.rs
dex-blockchain-expert/src/evm_compat/: mod.rs  parallel_evm.rs
dex-blockchain-expert/src/hyperliquid/: api.rs  connector.rs  market_data.rs  mod.rs  order_manager.rs  types.rs  vault_integration.rs
dex-blockchain-expert/src/layer2/: data_availability.rs  mod.rs  optimistic_rollup.rs  state_channel.rs  zk_rollup.rs
dex-blockchain-expert/src/monitoring/: mod.rs
dex-blockchain-expert/src/network/: mod.rs
dex-blockchain-expert/src/optimization/: async_io.rs  batch_processor.rs  (+3 more)
dex-blockchain-expert/tests/: consensus_test.rs  dex_test.rs  state_machine_test.rs
(+27 files in other folders)
