[package]
name = "dex-blockchain-expert"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
aes-gcm = "0.10"
flate2 = "1.0"
bytes = "1.5"
futures = "0.3"
crossbeam-channel = "0.5"
parking_lot = "0.12"
dashmap = "5.5"
rocksdb = "0.21"
ethers = "2.0"
revm = "3.5"
primitive-types = "0.12"
rlp = "0.5"
criterion = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
ed25519-dalek = "2.1"
memmap2 = "0.9"
libc = "0.2"

[[bench]]
name = "performance_bench"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
proptest = "1.4"
quickcheck = "1.0"